# somint

./: .gitignore  README.md  poetry.toml  somint.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
agents/: CONTEXT.md  GEMINI.md
engine/: README.md  main.py  poetry.toml  pyproject.toml
engine/app/core/: io.py
engine/app/scripts/: detectcli.py
engine/configs/: somint.yaml
engine/detection/: card_detection.py
engine/schemas/: grade.py  image.py
engine/utils/: points.py  transforms.py
